@@ -2,6 +2,7 @@ DIST gnubiff-2.1.3.tar.gz 765654 RMD160 06a2cdbaabfd891f0eae75a607386f4d641c266e
 DIST gnubiff-2.1.9.tar.gz 777299 RMD160 b78c7163ed20bc2ae8702d3139479d6ca65514f8 SHA1 179cce4d7a6b25890ac919b44b7401dba9038ca1 SHA256 55457065fd7719e497002461ba37c29834c02719ee67d1f33323b19cd66d168b
 DIST gnubiff-2.2.1.tar.gz 804401 RMD160 5f0a9cd01c384eab25ec96c6e74fe95c8e905ada SHA1 1c1ac505fbda09c1e3174ef8c130dfef58759f3c SHA256 a83f1126926cbc4a558917db9b9ec9905d15a21bf465d6a56ee68ab22c37c99f
 DIST gnubiff-2.2.2.tar.gz 812648 RMD160 fe59f5cac7e14fe1ce95db686d3df32097a221cd SHA1 a19926e2a3e7bf53456cb1345da3731d8dad2e9b SHA256 120b6f1486f5c78df7fc3190ac1d19151f603261d2afd9e2c97a5c7eb4575306
+DIST gnubiff-2.2.5.tar.gz 828849 RMD160 84b3d078e0aa4319de0a9edf29303acd19666a86 SHA1 17f347c8cf349f37ea9d1f5bcd8f0e3dea00a030 SHA256 136fb61b0f6ada45e940192455728c7eb5cc185902ca98adc0c0e18cd547b85e
 EBUILD gnubiff-2.1.3.ebuild 1162 RMD160 4b6565799c0f220d2f4da824023975bf495e26fb SHA1 6e4c05d9ad7d7f26bdec6bd90d872ea1730e268e SHA256 43c2b582ca8b49817ec1ebc6a70b77bea73ad0ebfce69523e7cc3a5a67e2e6bc
 MD5 3b7de27375a3b374e69b7e2747dd7f1d gnubiff-2.1.3.ebuild 1162
 RMD160 4b6565799c0f220d2f4da824023975bf495e26fb gnubiff-2.1.3.ebuild 1162
@@ -18,10 +19,14 @@ EBUILD gnubiff-2.2.2.ebuild 1176 RMD160 4ad2a9ba0e4e327422da53e5239013394dafdc23
 MD5 722ef6fccb987b344511096ad7c3a776 gnubiff-2.2.2.ebuild 1176
 RMD160 4ad2a9ba0e4e327422da53e5239013394dafdc23 gnubiff-2.2.2.ebuild 1176
 SHA256 08824440865b543bc9244d0d9a64b39e460e51a4d0f944ac07a4ec8277f21e00 gnubiff-2.2.2.ebuild 1176
-MISC ChangeLog 2145 RMD160 0c0e68688b9035a18c4c5bbc1c6a8136f5ed8790 SHA1 4443c859e01ad2f8a80636e8850a896f4a0872fd SHA256 8fd76b9676615872719aa24b890557311324eb6b922ee27dc9a8899fe52d2e00
-MD5 ede76d7280e6257d199a182ffe96848b ChangeLog 2145
-RMD160 0c0e68688b9035a18c4c5bbc1c6a8136f5ed8790 ChangeLog 2145
-SHA256 8fd76b9676615872719aa24b890557311324eb6b922ee27dc9a8899fe52d2e00 ChangeLog 2145
+EBUILD gnubiff-2.2.5.ebuild 1174 RMD160 6ee646f80c64f97380b9d3e91cc0b5ca12680341 SHA1 47d16ecc5c54345b2f6d458642e2fb847c565f78 SHA256 ab0a43f4981264852d293fd1c7b46f27f9cdd3ad3c6f4788d45d7390b8a4c0e7
+MD5 2d72ad7a22aa25e3013d988f4a145eeb gnubiff-2.2.5.ebuild 1174
+RMD160 6ee646f80c64f97380b9d3e91cc0b5ca12680341 gnubiff-2.2.5.ebuild 1174
+SHA256 ab0a43f4981264852d293fd1c7b46f27f9cdd3ad3c6f4788d45d7390b8a4c0e7 gnubiff-2.2.5.ebuild 1174
+MISC ChangeLog 2267 RMD160 91146bd2c1f6d3894d2a02b262b35f13a6d6bf48 SHA1 63864f40a9373c87695b46e68f189f0740cfb37e SHA256 11b5fc13e24e20e36b5c28ba9548166f502a5c5e63bd9144b90e782e7fa97532
+MD5 3d4e64e1b0298bcc167f290b68b50283 ChangeLog 2267
+RMD160 91146bd2c1f6d3894d2a02b262b35f13a6d6bf48 ChangeLog 2267
+SHA256 11b5fc13e24e20e36b5c28ba9548166f502a5c5e63bd9144b90e782e7fa97532 ChangeLog 2267
 MISC metadata.xml 250 RMD160 e6b6275b24160c743b7aa9bac803b7a4df8e6a02 SHA1 b5158eeefe0233a3f61db1bf49d1d40650ffe4e7 SHA256 4bcc9a7f59dd143cf446a700e9aa9f808d3e9869a16991c50e3bce063833e7fa
 MD5 38f7e7e07cecf943cd078f4aef09fef1 metadata.xml 250
 RMD160 e6b6275b24160c743b7aa9bac803b7a4df8e6a02 metadata.xml 250
@@ -38,3 +43,6 @@ SHA256 8de1d9effbd58fb7ad77ddeed0d51ef7987eb720625c67e2c086e259a49e26be files/di
 MD5 cab2b25b787d99faa123c68bba25c25f files/digest-gnubiff-2.2.2 241
 RMD160 12756e3b487310b331a01fcdb766115df86d4a6c files/digest-gnubiff-2.2.2 241
 SHA256 8021a52702ceb20285e9d9aa427a5f0514ecefba11a87f25676655b38f4db21c files/digest-gnubiff-2.2.2 241
+MD5 dd49ced9fcd3a87bca9f9750659ce499 files/digest-gnubiff-2.2.5 241
+RMD160 23ac206417b98b7f3aca0187c2395c9b331c44bf files/digest-gnubiff-2.2.5 241
+SHA256 7cd1cd67a95d46f44ea46a031592d5439094a20e28f2805b69027593d5e33302 files/digest-gnubiff-2.2.5 241
