@@ -1,0 +1,3 @@
+MD5 317e173dcb209582b24f325fba2e1504 gnubiff-2.2.5.tar.gz 828849
+RMD160 84b3d078e0aa4319de0a9edf29303acd19666a86 gnubiff-2.2.5.tar.gz 828849
+SHA256 136fb61b0f6ada45e940192455728c7eb5cc185902ca98adc0c0e18cd547b85e gnubiff-2.2.5.tar.gz 828849
